examples/pos/effekt_extern_io.effekt
extern def foo() at io: Unit =
  js { println("Hallo") }
  default { println("Hallo") }

def main() = { foo() }